--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,18 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
-  background-color: #333;
+  background-color: #E5E5E5;
   font-family: sans-serif;
   font-size: 10px;
+}
+
+h1, h3 {
+  background-color: #FFFFFF;
+  margin: auto;
+  padding: 10px;
+  font-size: 1.4em;
 }
 
 .container {
@@ -17,5 +28,15 @@ nav {
 }
 
 .restaurant-list {
-  padding-top: 50px;
+  padding: 5% 5%;
+  margin: auto;
+  width: auto;
+}
+
+.location {
+  background-color: red;
+
+}
+a:hover {
+  color: white;
 }
