--- a/css/style.css
+++ b/css/style.css
@@ -3,40 +3,66 @@
 }
 
 body {
-  background-color: #E5E5E5;
+  background-color: #353535;
   font-family: sans-serif;
   font-size: 10px;
 }
 
-h1, h3 {
-  background-color: #FFFFFF;
-  margin: auto;
+nav {
+  margin-top: 0;
   padding: 10px;
+  width: 360px;
+  margin: 0 auto;
+
+}
+
+
+h1, h3 {
+  background-color: #b5b3b3;
+  margin: auto;
+  padding: 5px;
   font-size: 1.4em;
 }
 
-.container {
-  margin: 0 auto;
-  width: 420px;
+h1 {
+  font-weight: bold;
 }
 
-nav {
+.container {
+  margin-top: 10px;
   margin: 0 auto;
-  padding: 10px 0 15px 15px;
-  position: fixed;
-  width: 420px;
+  width: 360px;
+}
+.arrow {
+  float: right;
+  margin-top: 10px;
+  width: 10px;
+  padding: 5px;
+}
+
+.arrow-left {
+  background-color: #000000;
+  margin: auto;
+  padding: 20px;
+  width: 360px;
+
+}
+.box1 {
+  background-color: #aaa;
+  border: 1px solid #727070;
+  margin: 10px;
+  width: 360px;
 }
 
 .restaurant-list {
-  padding: 5% 5%;
-  margin: auto;
+  padding: 10% 10%;
+  margin: 5%;
   width: auto;
 }
 
 .location {
-  background-color: red;
+  width: 360px;
 
-}
-a:hover {
-  color: white;
+
+
 }
