--- a/css/style.css
+++ b/css/style.css
@@ -33,11 +33,15 @@ h1 {
   margin: 0 auto;
   width: 360px;
 }
+.content {
+  width: 90%;
+  float: left;
+}
 .arrow {
   float: right;
-  margin-top: 10px;
-  width: 10px;
-  padding: 5px;
+  width: 5px;
+  padding-top: 25px;
+  padding-right: 25px;
 }
 
 .arrow-left {
@@ -54,14 +58,16 @@ h1 {
   width: 360px;
 }
 
-.restaurant-list {
-  padding: 10% 10%;
-  margin: 5%;
-  width: auto;
+.restaurant-list .location:last-child {
+   border-bottom: none;
 }
 
 .location {
-  width: 360px;
+  content: "";
+  display: table;
+  clear: both;
+}
+
 
 
 
