--- a/css/style.css
+++ b/css/style.css
@@ -8,67 +8,65 @@ body {
   font-size: 10px;
 }
 
-nav {
-  margin-top: 0;
-  padding: 10px;
-  width: 360px;
+.container {
+  margin-top: 10px;
   margin: 0 auto;
-
+  width: 420px;
 }
 
+nav {
+  margin: 0 auto;
+  padding: 10px 0px 15px 15px;
+  width: 420px;
+  background-color: black;
+  position: fixed;
+}
 
-h1, h3 {
-  background-color: #b5b3b3;
-  margin: auto;
-  padding: 5px;
+.arrow-left {
+  float: left;
+  margin-top: 8px;
+  text-align: left;
+  width: 10%;
+}
+
+.restaurant-list {
+  padding-top: 50px;
+}
+
+.location {
+  border-bottom: 1px solid #777;
+  background-color: #dadada;
+  float: left;
+  padding: 20px;
+  width: 100%;
+}
+
+.location:hover {
+  background-color: #aaa;
+}
+
+.content {
+  width: 90%;
+  float: left;
+}
+
+.locatin h1 {
+  font-size: 1.8em;
+  font-weight: 900;
+}
+
+.location h3 {
   font-size: 1.4em;
+  margin-top: 5px;
 }
 
 h1 {
   font-weight: bold;
 }
 
-.container {
-  margin-top: 10px;
-  margin: 0 auto;
-  width: 360px;
-}
-.content {
-  width: 90%;
-  float: left;
-}
 .arrow {
   float: right;
-  width: 5px;
-  padding-top: 25px;
-  padding-right: 25px;
-}
-
-.arrow-left {
-  background-color: #000000;
-  margin: auto;
-  padding: 20px;
-  width: 360px;
-
-}
-.box1 {
-  background-color: #aaa;
-  border: 1px solid #727070;
-  margin: 10px;
-  width: 360px;
-}
-
-.restaurant-list .location:last-child {
-   border-bottom: none;
-}
-
-.location {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-
-
-
+  margin-top: 5px;
+  text-align: right;
+  width: 10px;
 }
